--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development"
+    "watch": "webpack --watch",
+    "serve": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "eslint": "^5.0.1"
