--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An offline-first currency converter",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "serve": "webpack-dev-server"
+    "watch": "webpack --watch --mode development",
+    "serve": "webpack-dev-server --https --hot --inline --mode development",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -31,14 +31,19 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.11",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
+    "serviceworker-webpack-plugin": "^0.2.3",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "eslint": "^5.0.1"
   }
 }
