--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "An offline-first currency converter",
   "main": "index.html",
   "scripts": {
-    "watch": "webpack --watch --mode development",
-    "serve": "webpack-dev-server --https --hot --inline --mode development",
-    "build": "webpack"
+    "watch": "webpack --watch --mode production",
+    "serve": "webpack-dev-server --hot --inline --mode production",
+    "build": "webpack --mode production",
+    "dev": "concurrently \"npm run watch\" \"npm run serve\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "concurrently": "^3.6.0",
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
@@ -45,5 +47,8 @@
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "idb": "^2.1.3"
   }
 }
