--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "idb": "^4.0.3"
+    "idb": "^4.0.3",
+    "node-gyp": "^4.0.0"
   }
 }
